# NaiveBoy-Emulator

./: .gitignore  CMakeLists.txt  README.md
src/: ARM7TDMI_S.cpp  ARM7TDMI_S.h  main.cpp
